# hw07-Group22

./: .buildinfo  Cocoa_percent_change_analysis.ipynb  Figure.ipynb  LICENSE  Makefile  README.md  _config.yml  _toc.yml  common_charac_for_company_or_country.ipynb  common_charac_for_country_analysis.ipynb  conf.py  contribution_statement.md  environment.yml  genindex.html  lia_notebook.ipynb  main.html  main.ipynb  minji.ipynb  narrative.ipynb  objects.inv  runting.ipynb  search.html  searchindex.js  setup.cfg  test_chocolate.py
.doctrees/: environment.pickle  main.doctree
.github/workflows/: book.yml
_sources/: main.ipynb
analysis_notebooks/: Cocoa_percent_change_analysis.ipynb  analysis_for_review_ratings.ipynb  common_charac_for_country_analysis.ipynb  ingredients_analysis.ipynb  most_memorable_characteristic_regression.ipynb
data/: chocolate.csv  data12.csv  data45.csv
functions/: utils.py
functions.egg-info/: PKG-INFO  SOURCES.txt
functions/tests/: test_chocolate.py
tables/: Company_Location_Average_Rating.csv  Malaysia_charac.csv  Papua_charac.csv  Three_companies_with_highest_average rating.csv  Vanuatu_charac.csv  bad_review_memorable_characteristics.csv  company_cocoa_percent.csv  good_review_memorable_characteristics.csv  year_cocoa_percent.csv
tables/.ipynb_checkpoints/: Three_companies_with_highest_average rating-checkpoint.csv  Three_companies_with_lowest_average rating-checkpoint.csv
