[metadata]
name             = functions
version          = attr: functions.__version__
author           = Jenea Spinks, Lia Chin-Purcell, Minji Park, Runting Han
author_email     = minjipark7@berkeley.edu
description      = A package for analyzing chocolate datasets
long_description = file: README.md
long_description_content_type = text/markdown
keywords         = tools
license          = BSD 3-Clause License
classifiers      =
	Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = == 3.9.9,
install_requires =
	tqdm

[options.packages.find]
exclude =
    examples*
    docs*